service/aws/service.template
{
    "Description": "EC2 platform extension template for ADOP/B",
    "Mappings": {
        "RegionMap": {
            "eu-central-1": {
                "AMI": "ami-9bf712f4"
            },
            "eu-west-1": {
                "AMI": "ami-7abd0209"
            },
            "us-east-1": {
                "AMI": "ami-6d1c2007"
            },
            "us-west-1": {
                "AMI": "ami-af4333cf"
            },
            "us-west-2": {
                "AMI": "ami-d2c924b2"
            }
        }
    },
    "Outputs": {
        "EC2InstancePrivateIp": {
            "Description": "EC2Instance Private IP",
            "Value": {
                "Fn::GetAtt": [
                    "EC2Instance",
                    "PrivateIp"
                ]
            }
        },
        "EC2InstanceID" : {
            "Description": "EC2Instance ID",
            "Value" : { "Ref" : "EC2Instance" }
        }
    },
    "Parameters": {
        "EnvironmentName": {
            "Description": "The name of the EC2 instance being created",
            "Type": "String"
        },
        "EnvironmentSubnet": {
            "Description": "The ID of the subnet to create the instance in",
            "Type": "AWS::EC2::Subnet::Id"
        },
        "InstanceType": {
            "Default": "t2.large",
            "Description": "EC2 instance type",
            "Type": "String"
        },
        "KeyName": {
            "Description": "Key-pair name to use.",
            "Type": "AWS::EC2::KeyPair::KeyName"
        },
        "VPCId": {
            "Description": "VPC ID where the instance will be created",
            "Type": "AWS::EC2::VPC::Id"
        },
        "InboundCIDR": {
            "Default": "10.0.0.0/16",
            "Description": "Inbound Security Group CIDR Block",
            "Type": "String"
        }
    },
    "Resources": {
        "DefaultSecurityGroup": {
            "Properties": {
                "GroupDescription": "Enabling access to all IPs and below listed ports",
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "0",
                        "IpProtocol": "tcp",
                        "ToPort": "65535"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "0",
                        "IpProtocol": "udp",
                        "ToPort": "65535"
                    }
                ],
                "SecurityGroupIngress": [
                    {
                        "CidrIp": {
                            "Ref": "InboundCIDR"
                        },
                        "FromPort": "22",
                        "IpProtocol": "tcp",
                        "ToPort": "22"
                    },
                    {
                        "CidrIp": {
                            "Ref": "InboundCIDR"
                        },
                        "FromPort": "80",
                        "IpProtocol": "tcp",
                        "ToPort": "80"
                    },
                    {
                        "CidrIp":  {
                            "Ref": "InboundCIDR"
                        },
                        "FromPort": "443",
                        "IpProtocol": "tcp",
                        "ToPort": "443"
                    },
                    {
                        "CidrIp":  {
                            "Ref": "InboundCIDR"
                        },
                        "FromPort": "8080",
                        "IpProtocol": "tcp",
                        "ToPort": "8080"
                    }
                ],
                "VpcId": {
                    "Ref": "VPCId"
                }
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "EC2Instance": {
            "Properties": {
                "BlockDeviceMappings": [
                    {
                        "DeviceName": "/dev/xvda",
                        "Ebs": {
                            "DeleteOnTermination": "true",
                            "VolumeSize": 50
                        }
                    }
                ],
                "ImageId": {
                    "Fn::FindInMap": [
                        "RegionMap",
                        {
                            "Ref": "AWS::Region"
                        },
                        "AMI"
                    ]
                },
                "InstanceType": {
                    "Ref": "InstanceType"
                },
                "KeyName": {
                    "Ref": "KeyName"
                },
                "NetworkInterfaces": [
                    {
                        "AssociatePublicIpAddress": "true",
                        "DeleteOnTermination": "true",
                        "DeviceIndex": "0",
                        "GroupSet": [
                            {
                                "Ref": "DefaultSecurityGroup"
                            }
                        ],
                        "SubnetId": {
                            "Ref": "EnvironmentSubnet"
                        }
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "EnvironmentName"
                        }
                    },
                    {
                        "Key": "createdFor",
                        "Value": {
                            "Ref": "EnvironmentName"
                        }
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash\n",
                                "export IP=$(hostname --ip-address)\n",
                                "NODE=",
                                {
                                    "Ref": "EnvironmentName"
                                },
                                "\n",
                                "yum install -y httpd\n",
                                "echo \"Listen 8080\" >> /etc/httpd/conf/httpd.conf\n",
                                "service httpd start\n"
                            ]
                        ]
                    }
                }
            },
            "Type": "AWS::EC2::Instance"
        }
    }
}
